# city-share-map

./: .env  Makefile  README.md  docker-compose.local.yml  docker-compose.override.yml  docker-compose.prd.yml  docker-compose.prod.yml  docker-compose.stg.yml  docker-compose.yml  gen.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml  gov-app-ci.yml
backend/: .gitignore  README.md  gen.py  pyproject.toml
backend/app/: .env.example  backend_pre_start.py  const.py  gen.py  initial_data.py  main.py  tests_pre_start.py
backend/app/alembic/: env.py
backend/app/api/: deps.py  main.py  router.py
backend/app/api/routes/: admin_user.py  login.py  post_problem.py  problem.py  users.py  utils.py
backend/app/core/: config.py  security.py
backend/app/crud/: base.py  citizen_user.py  post.py  problem.py  user.py
backend/app/db/: base.py  db.py
backend/app/models/: base.py  item.py  problems.py  user.py
backend/app/schemas/: apiexeption.py  apiresponce.py  item.py  login.py  msg.py  post.py  problem.py  token.py  user.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_login.py  test_users.py
backend/app/tests/crud/: test_user.py
backend/app/tests/utils/: item.py  user.py  utils.py
docs/: openapi.yml
docs/openapi-generator-6.6.0/: ReadMe.md
frontend/: .env  .env.example  .env.local  .env.prd  .env.stg  .eslintignore  .gitignore  Dockerfile  README.md  openapi-config.yml  package.json
frontend/src/api/: client.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/components/: LoadingScreen.tsx  LoadingText.tsx  ReloadText.tsx  SidebarWIthHeader.tsx  SurveyLink.tsx
frontend/src/config/: env.ts
frontend/src/context/: liffProvider.tsx  postProvider.tsx
gov-app/: .eslintrc.json  .prettierignore  .prettierrc  next.config.mjs  package.json
(+112 files in other folders)
